--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/print.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu" />
     <title>Document</title>
 </head>
 <body>
     <header>
         <h1>Media Queries</h1>
+        <span id="lista" class="material-symbols-outlined">menu</span>
         <menu>
             <ul>
                 <li><a href="#">Opção 1</a></li>
